# chrome-devtools

./: .eslintrc.js  .gitignore  .npmrc  BUILD.gn  DEPS  package-lock.json  package.json  tsconfig.json
config/gni/: devtools_grd_files.gni  devtools_image_files.gni
config/typescript/: tsconfig.base.json
front_end/: .eslintrc.js  BUILD.gn  entrypoint_template.html
front_end/core/host/: InspectorFrontendHost.ts
front_end/core/protocol_client/: InspectorBackend.ts
front_end/core/sdk/: Connections.ts  ConsoleModel.ts  LogModel.ts  ResourceTreeModel.ts
front_end/entrypoints/devtools_app/: BUILD.gn
front_end/entrypoints/hippy/: BUILD.gn
front_end/entrypoints/hippy_tdf/: BUILD.gn  hippy_tdf.ts
front_end/entrypoints/main/: BUILD.gn
front_end/entrypoints/shell/: BUILD.gn  shell.ts
front_end/entrypoints/tdf_core/: BUILD.gn  tdf_core.ts
front_end/global_typings/: request_idle_callback.d.ts
front_end/models/bindings/: BUILD.gn
front_end/models/logs/: LogManager.ts
front_end/panels/cdp_debug/: BUILD.gn  CdpDebugPanel.ts  cdp_debug-legacy.ts  cdp_debug-meta.ts  cdp_debug.ts
front_end/panels/core_memory/: BUILD.gn  CoreMemoryPanel.ts  core_memory-legacy.ts  core_memory-meta.ts  core_memory.ts
front_end/panels/core_performance/: BUILD.gn  CorePerformancePanel.ts  core_performance-legacy.ts  core_performance-meta.ts  core_performance.ts
front_end/panels/lighthouse/: lighthouse-meta.ts
front_end/panels/react_devtools/: BUILD.gn  ReactDevtoolsPanel.ts  react_devtools-legacy.ts  react_devtools-meta.ts  react_devtools.ts
front_end/panels/ui_inspector/: BUILD.gn  UiInspectorPanel.ts  ui_inspector-legacy.ts  ui_inspector-meta.ts  ui_inspector.ts
front_end/panels/vue_devtools/: BUILD.gn  VueDevtoolsPanel.ts  vue_devtools-legacy.ts  vue_devtools-meta.ts  vue_devtools.ts
front_end/ui/legacy/: BUILD.gn  CustomPanel.ts  legacy.ts
front_end/utils/: BUILD.gn
