# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
# import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

# generate_css("css_files") {
#   sources = []
# }

devtools_module("core_memory") {
  sources = [
    "custom-panel.ts"
  ]

  deps = [
    "../core/i18n:bundle",
    "../ui/legacy:bundle"
  ]
}
