# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
# import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

# generate_css("css_files") {
#   sources = []
# }

devtools_module("cdp_debug") {
  sources = [
    "CdpDebugPanel.ts"
  ]

  deps = [
    "../../core/i18n:bundle",
    "../../ui/legacy:bundle"
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "cdp_debug.ts"

  deps = [
    ":cdp_debug",
  ]

  visibility = [
    ":*",
    "../../../test/unittests/front_end/entrypoints/missing_entrypoints/*",
    "../../entrypoints/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("legacy") {
  entrypoint = "cdp_debug-legacy.ts"

  deps = [ ":bundle" ]

  visibility = [
    "../..:legacy_entrypoints",
    "../../legacy_test_runner/*",
  ]
}

devtools_entrypoint("meta") {
  entrypoint = "cdp_debug-meta.ts"

  deps = [ ":bundle" ]

  visibility = [ "../../entrypoints/*" ]
}
