# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
# import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

# generate_css("css_files") {
#   sources = []
# }

devtools_module("vue_devtools") {
  sources = [
    "VueDevtoolsPanel.ts"
  ]

  deps = [
    "../../core/i18n:bundle",
    "../../ui/legacy:bundle"
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "vue_devtools.ts"

  deps = [
    ":vue_devtools",
  ]

  visibility = [
    ":*",
    "../../../test/unittests/front_end/entrypoints/missing_entrypoints/*",
    "../../entrypoints/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("legacy") {
  entrypoint = "vue_devtools-legacy.ts"

  deps = [ ":bundle" ]

  visibility = [
    "../..:legacy_entrypoints",
    "../../legacy_test_runner/*",
  ]
}

devtools_entrypoint("meta") {
  entrypoint = "vue_devtools-meta.ts"

  deps = [ ":bundle" ]

  visibility = [ "../../entrypoints/*" ]
}
